fix: Revert early replaced new URL(String) constructor usage, due to application-specific parsing used.