@@ -17,7 +17,6 @@
 package org.qubership.atp.itf.lite.backend.model.ei;
 
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.List;
@@ -51,7 +50,7 @@ public class ToPostmanUrl {
     public ToPostmanUrl(String urlString) {
         this.raw = urlString;
         try {
-            URL url = URI.create(urlString).toURL();
+            URL url = new URL(urlString);
             this.protocol = url.getProtocol();
             if (StringUtils.isNotBlank(url.getHost())) {
                 this.host = Arrays.asList(url.getHost().split("\\."));
